Strip out NeoForge specific code